--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: fingerprint_auth
-description: "A new Flutter plugin project."
+description: "Fingerprint Auth is a Flutter plugin that enables fingerprint recognition and authentication using the device's fingerprint sensor."
 version: 0.0.3
 homepage: https://github.com/TZ-Porky/fingerprint_auth_plugin.git
 
