--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -1,4 +1,4 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-  package="com.example.fingerprint_auth">
+  package="com.example.flutter_fingerprint_auth">
   <uses-permission android:name="android.permission.USE_BIOMETRIC"/>
 </manifest>
