--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,7 @@ flutter:
   plugin:
     platforms:
       android:
-        package: com.example.flutter_fingerprint_auth
+        package: com.example.fingerprint_auth
         pluginClass: FlutterFingerprintAuth
       ios:
         pluginClass: FlutterFingerprintAuth
